--- a/wiki/CR_TranslationToolWindow.wiki
+++ b/wiki/CR_TranslationToolWindow.wiki
@@ -2,14 +2,14 @@
 [http://code.google.com/p/dxcorecommunityplugins/wiki/Feedback  http://dxcorecommunityplugins.googlecode.com/svn/trunk/Common/Graphics/Feedback.png]
 ===== Built using CodeRush 11.2 =====
 === Introduction ===
-A ToolWindow to translate the active member to another language.
+A !ToolWindow to translate the active member to another language.
 
 === Usage ===
 Bring up the !ToolWindow using !DevExpress\!ToolWindows\Translator
 
 Place the caret within some code. 
 
-the !ToolWindow will translate the active member to the language specified within the !ToolWindow.
+The !ToolWindow will translate the active member to the language specified within the !ToolWindow.
 
 http://dxcorecommunityplugins.googlecode.com/svn/trunk/CR_TranslationToolWindow/Screenshots/Translator.gif
 === Credits ===
