Edited wiki page CR_TranslationToolWindow through web user interface.

--- a/wiki/CR_TranslationToolWindow.wiki
+++ b/wiki/CR_TranslationToolWindow.wiki
@@ -1,6 +1,6 @@
 [http://www.rorybecker.co.uk/DevExpress/Community/Plugins/CR_TranslationToolWindow/ http://dxcorecommunityplugins.googlecode.com/svn/trunk/Common/Graphics/Download.png]      [http://code.google.com/p/dxcorecommunityplugins/wiki/InstallInstructions  http://dxcorecommunityplugins.googlecode.com/svn/trunk/Common/Graphics/InstallHelp.png]
 [http://code.google.com/p/dxcorecommunityplugins/wiki/Feedback  http://dxcorecommunityplugins.googlecode.com/svn/trunk/Common/Graphics/Feedback.png]
-===== Built using CodeRush 11.2 =====
+===== Built using !CodeRush 11.2 =====
 === Introduction ===
 A !ToolWindow to translate the active member to another language.
 
@@ -11,7 +11,17 @@ Place the caret within some code.
 
 The !ToolWindow will translate the active member to the language specified within the !ToolWindow.
 
-http://dxcorecommunityplugins.googlecode.com/svn/trunk/CR_TranslationToolWindow/Screenshots/Translator.gif
+For example:
+
+A translation from CSharp...
+
+http://dxcorecommunityplugins.googlecode.com/svn/trunk/CR_TranslationToolWindow/Screenshots/TranslationFromCS.png
+
+..to Basic
+
+http://dxcorecommunityplugins.googlecode.com/svn/trunk/CR_TranslationToolWindow/Screenshots/TranslationToBasic.png
+
+
 === Credits ===
 
 Author: [http://devexpress.com/mark Mark Miller] 
