--- a/wiki/DX_PluginUpdater.wiki
+++ b/wiki/DX_PluginUpdater.wiki
@@ -6,6 +6,9 @@ This is a plugin designed to find New plugins and Updates to plugins you already
 
 Please read *Notes* and *Requirements* sections (below) before installing this plugin.
 
+=== *NOTE* ===
+Many of the plugins downloaded by this plugin are not authored or controlled by !DevExpress. The latest version of this plugin will not operate unless you indicate your understanding of this.
+
 === Detailed version ===
 
 Function 1: *Update Plugins* will scan the community site for any updates to plugins you already have installed.
@@ -13,7 +16,6 @@ Function 1: *Update Plugins* will scan the community site for any updates to plu
 Function 2: *Find New Plugins* will scan the community site for plugins you do not already have installed.
 
 [https://github.com/RoryBecker/DX_PluginUpdater/raw/master/Screenshots/PluginUpdaterMenuItems.png]
-
 
 When invoked, each menu item will present you with a list of its plugins, and allow you to choose which to download and update\install.
 
