Edited wiki page Prerequisites through web user interface.

--- a/wiki/Prerequisites.wiki
+++ b/wiki/Prerequisites.wiki
@@ -3,4 +3,4 @@
 ==== Prerequisites ====
 Plugins on this site all require:
  * A non-express version of either VS2008, VS2010 or VS2012
- * A copy of CodeRush [http://devexpress.com/coderush CodeRush]
+ * A copy of [http://devexpress.com/coderush CodeRush]
