Edited wiki page CR_ExtensionMethodsHelper through web user interface.

--- a/wiki/CR_ExtensionMethodsHelper.wiki
+++ b/wiki/CR_ExtensionMethodsHelper.wiki
@@ -1,8 +1,9 @@
 #summary Adds a CodeProvider which adds missing namespace references for extension methods.
 
+= Important =
 Community plugins are slowly being migrated to [http://github.com GitHub].
 
-This particular plugin has now been [https://github.com/RoryBecker/CR_ExtensionMethodsHelper relocated here].
+This plugin has now been [https://github.com/RoryBecker/CR_ExtensionMethodsHelper relocated here].
 
 The latest release of this plugin is [https://github.com/RoryBecker/CR_ExtensionMethodsHelper/releases/latest available here].
 
