--- a/wiki/CR_StyleNinja.wiki
+++ b/wiki/CR_StyleNinja.wiki
@@ -1,4 +1,13 @@
 #summary Provides StyleCop style rules for CodeIssues (as hints)
+
+= This Plugin Has Moved =
+This plugin and it's source have moved to github
+The new address for this plugin is [https://github.com/RoryBecker/CR_StyleNinja https://github.com/RoryBecker/CR_StyleNinja]
+
+The latest release [https://github.com/RoryBecker/CR_StyleNinja/releases/latest can be found here] 
+---
+
+
 [http://www.rorybecker.co.uk/DevExpress/Community/Plugins/CR_StyleNinja http://dxcorecommunityplugins.googlecode.com/svn/trunk/Common/Graphics/Download.png]      [http://code.google.com/p/dxcorecommunityplugins/wiki/InstallInstructions  http://dxcorecommunityplugins.googlecode.com/svn/trunk/Common/Graphics/InstallHelp.png]
 [http://code.google.com/p/dxcorecommunityplugins/wiki/Feedback  http://dxcorecommunityplugins.googlecode.com/svn/trunk/Common/Graphics/Feedback.png]
 ===== Requires DXCore 10.2 since build 1501 =====
