--- a/wiki/CR_StyleNinja.wiki
+++ b/wiki/CR_StyleNinja.wiki
@@ -2,7 +2,8 @@
 
 = This Plugin Has Moved =
 
-This plugin and it's source have moved to github
+This plugin and it's source have moved to github.
+
 The new address for this plugin is [https://github.com/RoryBecker/CR_StyleNinja https://github.com/RoryBecker/CR_StyleNinja]
 
 The latest release [https://github.com/RoryBecker/CR_StyleNinja/releases/latest can be found here] 
