--- a/wiki/CR_RegionTabber.wiki
+++ b/wiki/CR_RegionTabber.wiki
@@ -1,17 +1,7 @@
-[http://www.rorybecker.co.uk/DevExpress/Community/Plugins/CR_RegionTabber/ http://dxcorecommunityplugins.googlecode.com/svn/trunk/Common/Graphics/Download.png]      [http://code.google.com/p/dxcorecommunityplugins/wiki/InstallInstructions  http://dxcorecommunityplugins.googlecode.com/svn/trunk/Common/Graphics/InstallHelp.png]
-[http://code.google.com/p/dxcorecommunityplugins/wiki/Feedback  http://dxcorecommunityplugins.googlecode.com/svn/trunk/Common/Graphics/Feedback.png]
-===== Build using !CodeRush 11.2.7 =====
-=== Introduction ===
-This plugin provides an extension to the Tab-To-Next-Reference feature of !CodeRush.
+= This Plugin Has Moved =
 
-Using this plugin you can now Tab between matching #Region and #End region directives.
+This plugin and it's source have moved to github.
 
-=== Usage ===
-Place your caret on a *#Region* or *#End Region* directive and hit the *Tab* or *Shift+Tab* key combination.
+The new address for this plugin is [https://github.com/RoryBecker/CR_RegionTabber https://github.com/RoryBecker/CR_RegionTabber]
 
-*Note: Currently this plugin is disabled when Region Paining is enabled.*
-
-http://dxcorecommunityplugins.googlecode.com/svn/trunk/CR_RegionTabber/Screenshots/CR_RegionTabber.gif
-=== Credits ===
-
-Author: [RoryBecker] 
+The latest release [https://github.com/RoryBecker/CR_RegionTabber/releases/latest can be found here] 
