--- a/wiki/CR_ImplementBaseConstructors.wiki
+++ b/wiki/CR_ImplementBaseConstructors.wiki
@@ -1,19 +1,10 @@
 #summary Creates constructors for a class that call base constructors.
 #labels Phase-Support
-[http://www.rorybecker.co.uk/DevExpress/Community/Plugins/CR_ImplementBaseConstructors/ http://dxcorecommunityplugins.googlecode.com/svn/trunk/Common/Graphics/Download.png]      [http://code.google.com/p/dxcorecommunityplugins/wiki/InstallInstructions  http://dxcorecommunityplugins.googlecode.com/svn/trunk/Common/Graphics/InstallHelp.png]
-[http://code.google.com/p/dxcorecommunityplugins/wiki/Feedback  http://dxcorecommunityplugins.googlecode.com/svn/trunk/Common/Graphics/Feedback.png]
 
-*This plugin is considered obsolete since this functionality has since been added to CodeRush*
+= This Plugin Has Moved =
 
-= Introduction =
+This plugin and it's source have moved to github.
 
-This plugin generates constructors in the current class for each constructor in the base class and populates these with code to call into the base constructors.
+The new address for this plugin is [https://github.com/RoryBecker/CR_ImplementBaseConstructors https://github.com/RoryBecker/CR_ImplementBaseConstructors]
 
-
-= Usage =
-
-This plugin is initiated as from the Code (SmartTag) menu 
-
-= Credits =
-
-Author: RoryBecker
+The latest release [https://github.com/RoryBecker/CR_ImplementBaseConstructors/releases/latest can be found here] 
