--- a/wiki/DX_GenerateProxy.wiki
+++ b/wiki/DX_GenerateProxy.wiki
@@ -1,23 +1,8 @@
 #summary Generates a Proxy class A, of Source class B, without altering B.
-[http://www.rorybecker.co.uk/DevExpress/Community/Plugins/DX_GenerateProxy http://dxcorecommunityplugins.googlecode.com/svn/trunk/Common/Graphics/Download.png]      [http://code.google.com/p/dxcorecommunityplugins/wiki/InstallInstructions  http://dxcorecommunityplugins.googlecode.com/svn/trunk/Common/Graphics/InstallHelp.png]
-[http://code.google.com/p/dxcorecommunityplugins/wiki/Feedback  http://dxcorecommunityplugins.googlecode.com/svn/trunk/Common/Graphics/Feedback.png]
-===== Requires DXCore 11.1 since build 1689 =====
-=== Introduction ===
-Generates a Proxy class A, of Source class B, without altering B.
+= This Plugin Has Moved =
 
-This is useful for mocking Webservices. One can generate a proxy and then extract an interface from the proxy. 
+This plugin and it's source have moved to github.
 
-One can now mock the interface safe in the knowledge that it accurately represents the proxy and the source class.
+The new address for this plugin is [https://github.com/RoryBecker/CR_GenerateProxy https://github.com/RoryBecker/CR_GenerateProxy]
 
-The generated Proxy provides wrapper methods and properties for all the public methods and properties on the source class. It takes an instance of the source class in it's constructor, redirecting calls made to itself to this inner instance.
-
-=== Usage ===
-  * Place the caret on the source class name, and activate the "Generate Proxy" Code Provider.
-  * Place caret on any Type reference, and activate the "Generate Proxy" Code Provider.
-
-A new Proxy Class will be generated with a constructor which takes a single instance of the base type from which the which takes an instance of the source in it's constructor.
-=== Updates ===
-  * 1973 - Added ability to generate from framework types.
-  * 1689 - Initial build
-=== Credits ===
-RoryBecker
+The latest release [https://github.com/RoryBecker/CR_GenerateProxy/releases/latest can be found here] 
