Edited wiki page CR_CautiousChange through web user interface.

--- a/wiki/CR_CautiousChange.wiki
+++ b/wiki/CR_CautiousChange.wiki
@@ -1,32 +1,8 @@
-[http://www.rorybecker.co.uk/DevExpress/Plugins/Community/CR_CautiousChange/ http://dxcorecommunityplugins.googlecode.com/svn/trunk/Common/Graphics/Download.png]      [http://code.google.com/p/dxcorecommunityplugins/wiki/InstallInstructions  http://dxcorecommunityplugins.googlecode.com/svn/trunk/Common/Graphics/InstallHelp.png]
-[http://code.google.com/p/dxcorecommunityplugins/wiki/Feedback  http://dxcorecommunityplugins.googlecode.com/svn/trunk/Common/Graphics/Feedback.png]
-===== Built using DXCore 11.1  =====
-=== Introduction ===
-This plugin allows you to highlight a block of code you intend to change and copy it into a comment directly above the starting point.
-the idea is to be able to refer to the original copy whilst editing a new version.
 
-== Additional Configuration ==
+= This Plugin Has Moved =
 
-[http://community.devexpress.com/blogs/rorybecker/archive/2010/10/05/binding-keys-in-coderush.aspx Bind the CautiousChange command] to a key or your choosing.
-@!SurlyDev chose *Ctrl+'*, because it was similar to VB's natural comment key of *'*
+This plugin and it's source have moved to github.
 
-=== Usage ===
+The new address for this plugin is [https://github.com/RoryBecker/CR_CautiousChange https://github.com/RoryBecker/CR_CautiousChange]
 
-Simply highlight your code and invoke the !CautiousChange action using whichever key you bound to it.
-
-== Bonus Usage ==
-If you invoke the !CautiousChange Command when the caret is resident on the "End amendment" of a previous '!CautiousChange', this action will remove the generated comment, leaving only your new code.
-
-== Future Directions ==
- * Transition to a !CodeProvider
- * Tab to Next !CautiousChange
- * !CodeIssue - "!CautiousChange is incomplete"
-
-=== Credits ===
-Original Idea: [http://twitter.com/Surlydev @SurlyDev]
-
-Original Author: [http://devexpress.com/mark Mark Miller] 
-
-VB Translation: [http://twitter.com/Surlydev @SurlyDev]
-
-Minor Refactoring: [http://devexpress.com/Rory Rory Becker]
+The latest release [https://github.com/RoryBecker/CR_CautiousChange/releases/latest can be found here] 
