Edited wiki page CR_DeclareParameter through web user interface.

--- a/wiki/CR_DeclareParameter.wiki
+++ b/wiki/CR_DeclareParameter.wiki
@@ -1,4 +1,4 @@
-#summary Provides a new "Declare Parameter" CodeProvider
+#summary Moved to GitHub - Provides a new "Declare Parameter" CodeProvider
 
 = This Plugin Has Moved =
 
