--- a/wiki/CR_EasierIdentifiers.wiki
+++ b/wiki/CR_EasierIdentifiers.wiki
@@ -1,21 +1,9 @@
-#summary Removes the need for the shift key when creating PascalCased or camelCased identifiers
-[http://www.rorybecker.co.uk/DevExpress/Community/Plugins/CR_EasierIdentifiers/ http://dxcorecommunityplugins.googlecode.com/svn/trunk/Common/Graphics/Download.png]      [http://code.google.com/p/dxcorecommunityplugins/wiki/InstallInstructions  http://dxcorecommunityplugins.googlecode.com/svn/trunk/Common/Graphics/InstallHelp.png]
-[http://code.google.com/p/dxcorecommunityplugins/wiki/Feedback  http://dxcorecommunityplugins.googlecode.com/svn/trunk/Common/Graphics/Feedback.png]
-===== Requires DXCore 10.2 =====
-=== Introduction ===
-Plugin to convert spaces into shift keys during the creation of identifiers.
+#summary Moved to GitHub - A Plugin to allow you to "Tab" between the attributes (and their values) contained within a html or xml tag.
 
-=== Configuration === 
-Aside from [http://code.google.com/p/dxcorecommunityplugins/wiki/InstallInstructions the usual installation] you'll also need to do some minimal configuration to get this plugin to function.
+= This Plugin Has Moved =
 
-Use the [http://community.devexpress.com/blogs/rorybecker/archive/2010/10/05/binding-keys-in-coderush.aspx shortcuts options page] to locate the !TemplateExpand binding (*Code\Expansion\[[Space]]* by default) and add a requirement that *System\ConvertingSpacesToCamelCase* is false.
+This plugin and it's source have moved to github.
 
-=== Usage ===
+The new address for this plugin is [https://github.com/RoryBecker/CR_EasierIdentifiers https://github.com/RoryBecker/CR_EasierIdentifiers]
 
-With the caret in a !TextField, type it's name using spaces instead of shift keys. Any characters following the space will be converted into uppercase.
-
-Thus typing *my[[space]]variable[[space]]name* will result in *MyVariableName*
-
-=== Credits ===
-
-Author: [http://devexpress.com/Mark MarkMiller]
+The latest release [https://github.com/RoryBecker/CR_EasierIdentifiers/releases/latest can be found here] 
