--- a/wiki/CR_EasierIdentifiers.wiki
+++ b/wiki/CR_EasierIdentifiers.wiki
@@ -1,5 +1,4 @@
-#summary Moved to GitHub - A Plugin to allow you to "Tab" between the attributes (and their values) contained within a html or xml tag.
-
+#summary Moved to GitHub
 = This Plugin Has Moved =
 
 This plugin and it's source have moved to github.
